welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: value ||| is not a member of Boolean
  if((a<=b && b<=c) |||(bOk && b<=c) ){return true}
                    ^